--- a/source/src/Carrent/appsettings.json
+++ b/source/src/Carrent/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "baseConnection": "Data Source=.; Database=CarRent; Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
