--- a/source/.github/workflows/build.yml
+++ b/source/.github/workflows/build.yml
@@ -43,5 +43,7 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"W1z4rd64_carrent" /o:"w1z4rd64" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          <insert_your_build_command>
+          dotnet restore ./source
+          dotnet build --no-restore ./source
+          dotnet test --no-build --collect:"XPlat Code Coverage" --verbosity normal ./source -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
